--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -18,7 +18,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import acquire as a"
+    "import acquire as a\n",
+    "import location as l\n",
+    "from env import api"
    ]
   },
   {
@@ -413,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ed681a91-f819-4378-b4a2-3c85931fa484",
    "metadata": {},
    "outputs": [
@@ -525,7 +527,7 @@
        "4                              18700  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,6 +536,375 @@
     "# testing the get_census_data function:\n",
     "census = a.get_census_data()\n",
     "census.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3a364e93-0af0-4edd-b441-2093513cd0e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yoga_coords = l.get_bexar_yoga_studios(api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3dff8499-7e3c-4c07-a7c5-5172b3906a24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>29.479815</td>\n",
+       "      <td>-98.492192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29.466683</td>\n",
+       "      <td>-98.490809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29.614283</td>\n",
+       "      <td>-98.312855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>29.485545</td>\n",
+       "      <td>-98.569729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29.727999</td>\n",
+       "      <td>-98.094677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>29.610592</td>\n",
+       "      <td>-98.491604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>29.792908</td>\n",
+       "      <td>-98.729822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>29.534977</td>\n",
+       "      <td>-98.521877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>29.521187</td>\n",
+       "      <td>-98.709042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>29.431522</td>\n",
+       "      <td>-98.482394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>29.563809</td>\n",
+       "      <td>-98.661560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>29.501858</td>\n",
+       "      <td>-98.575409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>29.526651</td>\n",
+       "      <td>-98.514163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>29.796768</td>\n",
+       "      <td>-98.754554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>29.716761</td>\n",
+       "      <td>-98.072319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>29.702234</td>\n",
+       "      <td>-98.126557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>29.643428</td>\n",
+       "      <td>-98.489568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>29.564069</td>\n",
+       "      <td>-98.600784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>29.520309</td>\n",
+       "      <td>-98.431504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>29.509964</td>\n",
+       "      <td>-98.469000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     latitude  longitude\n",
+       "0   29.479815 -98.492192\n",
+       "1   29.466683 -98.490809\n",
+       "2   29.614283 -98.312855\n",
+       "3   29.485545 -98.569729\n",
+       "4   29.727999 -98.094677\n",
+       "5   29.610592 -98.491604\n",
+       "6   29.792908 -98.729822\n",
+       "7   29.534977 -98.521877\n",
+       "8   29.521187 -98.709042\n",
+       "9   29.431522 -98.482394\n",
+       "10  29.563809 -98.661560\n",
+       "11  29.501858 -98.575409\n",
+       "12  29.526651 -98.514163\n",
+       "13  29.796768 -98.754554\n",
+       "14  29.716761 -98.072319\n",
+       "15  29.702234 -98.126557\n",
+       "16  29.643428 -98.489568\n",
+       "17  29.564069 -98.600784\n",
+       "18  29.520309 -98.431504\n",
+       "19  29.509964 -98.469000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yoga_coords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b6445124-fcae-44d8-91cc-14219fbcb6c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>census_tract</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>29.479815</td>\n",
+       "      <td>-98.492192</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29.466683</td>\n",
+       "      <td>-98.490809</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29.614283</td>\n",
+       "      <td>-98.312855</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>29.485545</td>\n",
+       "      <td>-98.569729</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29.727999</td>\n",
+       "      <td>-98.094677</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>29.610592</td>\n",
+       "      <td>-98.491604</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>29.792908</td>\n",
+       "      <td>-98.729822</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>29.534977</td>\n",
+       "      <td>-98.521877</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>29.521187</td>\n",
+       "      <td>-98.709042</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>29.431522</td>\n",
+       "      <td>-98.482394</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>29.563809</td>\n",
+       "      <td>-98.661560</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>29.501858</td>\n",
+       "      <td>-98.575409</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>29.526651</td>\n",
+       "      <td>-98.514163</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>29.796768</td>\n",
+       "      <td>-98.754554</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>29.716761</td>\n",
+       "      <td>-98.072319</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>29.702234</td>\n",
+       "      <td>-98.126557</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>29.643428</td>\n",
+       "      <td>-98.489568</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>29.564069</td>\n",
+       "      <td>-98.600784</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>29.520309</td>\n",
+       "      <td>-98.431504</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>29.509964</td>\n",
+       "      <td>-98.469000</td>\n",
+       "      <td>1207.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     latitude  longitude census_tract\n",
+       "0   29.479815 -98.492192      1207.01\n",
+       "1   29.466683 -98.490809      1207.01\n",
+       "2   29.614283 -98.312855      1207.01\n",
+       "3   29.485545 -98.569729      1207.01\n",
+       "4   29.727999 -98.094677      1207.01\n",
+       "5   29.610592 -98.491604      1207.01\n",
+       "6   29.792908 -98.729822      1207.01\n",
+       "7   29.534977 -98.521877      1207.01\n",
+       "8   29.521187 -98.709042      1207.01\n",
+       "9   29.431522 -98.482394      1207.01\n",
+       "10  29.563809 -98.661560      1207.01\n",
+       "11  29.501858 -98.575409      1207.01\n",
+       "12  29.526651 -98.514163      1207.01\n",
+       "13  29.796768 -98.754554      1207.01\n",
+       "14  29.716761 -98.072319      1207.01\n",
+       "15  29.702234 -98.126557      1207.01\n",
+       "16  29.643428 -98.489568      1207.01\n",
+       "17  29.564069 -98.600784      1207.01\n",
+       "18  29.520309 -98.431504      1207.01\n",
+       "19  29.509964 -98.469000      1207.01"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.assign_census_tract(yoga_coords)"
    ]
   }
  ],
