updataed project files, added explore.ipynb and location_predictor_final_report.ipynb

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -20,7 +20,6 @@
     "import os\n",
     "\n",
     "import acquire as a\n",
-    "import location as l\n",
     "from env import api\n",
     "\n",
     "# imports to deal with location data in Python\n",
@@ -1220,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4e752ec6-cf16-464c-adef-bb028b7f0e20",
    "metadata": {},
    "outputs": [],
@@ -1231,17 +1230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "3a364e93-0af0-4edd-b441-2093513cd0e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "yoga_coords = l.get_bexar_yoga_studios(api)"
+    "yoga_coords = a.get_bexar_yoga_studios(api)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3dff8499-7e3c-4c07-a7c5-5172b3906a24",
    "metadata": {},
    "outputs": [
@@ -1420,7 +1419,7 @@
        "19  29.509964 -98.469000    120701"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "361a05ca-b966-44c4-be71-e1a34f597c10",
    "metadata": {},
    "outputs": [],
@@ -1441,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "af2f646e-9872-421e-bb63-7fd0c0d19c46",
    "metadata": {},
    "outputs": [
@@ -1468,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "32ca50e4-5c23-437c-866d-e5819f0794dc",
    "metadata": {},
    "outputs": [],
@@ -1478,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "c8f93a60-3ae3-4a00-8e48-3f444a25a114",
    "metadata": {},
    "outputs": [],
@@ -1489,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "f2dc0a67-d7b9-4359-b2bb-81fd772257d2",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1667,7 @@
        "19  29.509964 -98.469000    120701"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1679,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "65f19051-a4a4-4e61-962f-20a64553beb2",
    "metadata": {},
    "outputs": [
@@ -1932,7 +1931,7 @@
        "[372 rows x 12 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "f3f6e7f5-1e55-4f3e-9b74-73139f9ee941",
    "metadata": {},
    "outputs": [
@@ -2148,7 +2147,7 @@
        "[382 rows x 9 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "91eb8c9a-f400-4d3b-90ba-d9ae14cda4af",
    "metadata": {},
    "outputs": [],
@@ -2170,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "e84cbfb9-1ae7-47be-8e40-6663feb9d493",
    "metadata": {},
    "outputs": [
@@ -2435,7 +2434,7 @@
        "[372 rows x 13 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2446,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "d429a5cf-8746-41ea-8066-231e5ebbc51b",
    "metadata": {},
    "outputs": [
@@ -2765,7 +2764,7 @@
        "363     29.621480     -98.478567  29.610592 -98.491604      True  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2776,7 +2775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "fe9b55f4-de3e-4cd5-9eea-7ea802612a18",
    "metadata": {},
    "outputs": [
@@ -2813,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "47101ba6-10f0-4f9b-a81f-088902167551",
    "metadata": {},
    "outputs": [
@@ -2823,7 +2822,7 @@
        "(371, 10)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
